Fix application-header extending off screen

--- a/app/assets/stylesheets/views/sellers/applications/header.scss
+++ b/app/assets/stylesheets/views/sellers/applications/header.scss
@@ -2,7 +2,6 @@
   padding: 1em;
   background: $grey-1;
   border-bottom: 1px solid $grey-2;
-  @extend .row;
 
   h1 {
     @extend .col-6;
